--- a/fe/sgbd-app/src/index.html
+++ b/fe/sgbd-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SGBD App</title>
+    <title>Database-Schema-Exposure-via-API-App</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
